--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <title>پخش زنده شبکه‌ها</title>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.13/dist/hls.min.js"></script>
   <style>
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       padding: 0;
@@ -13,12 +14,25 @@
       color: #eee;
       font-family: Tahoma, sans-serif;
       display: flex;
+      flex-direction: column;
       height: 100vh;
+    }
+    .header {
+      background: #111;
+      padding: 15px;
+      text-align: center;
+      font-size: 18px;
+      color: #00ff88;
+    }
+    .container {
+      display: flex;
+      flex: 1;
+      overflow: hidden;
     }
     .sidebar {
       width: 280px;
       background: #111;
-      padding: 20px;
+      padding: 15px;
       overflow-y: auto;
       border-left: 1px solid #333;
     }
@@ -26,12 +40,8 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      color: #00ff88;
-      margin: 0 0 20px 0;
+      padding: 15px;
+      overflow: hidden;
     }
     .channel-list {
       list-style: none;
@@ -39,18 +49,14 @@
       margin: 0;
     }
     .channel-item {
-      padding: 14px 18px;
+      padding: 14px 16px;
       margin: 6px 0;
       background: #1a1a1a;
       border-radius: 10px;
       cursor: pointer;
-      transition: all 0.2s;
-      font-size: 15px;
+      transition: 0.2s;
     }
-    .channel-item:hover {
-      background: #252525;
-      transform: translateX(-5px);
-    }
+    .channel-item:hover { background: #252525; }
     .channel-item.active {
       background: #e50914;
       color: white;
@@ -58,15 +64,15 @@
     }
     video {
       width: 100%;
-      max-height: 75vh;
+      height: 100%;
       background: #000;
       border-radius: 12px;
       box-shadow: 0 10px 40px rgba(0,0,0,0.8);
     }
     .custom {
-      margin-top: 25px;
+      margin-top: 15px;
       display: flex;
-      gap: 10px;
+      gap: 8px;
     }
     input {
       flex: 1;
@@ -78,7 +84,7 @@
       font-size: 15px;
     }
     button {
-      padding: 14px 24px;
+      padding: 14px 20px;
       background: #e50914;
       color: white;
       border: none;
@@ -86,36 +92,50 @@
       cursor: pointer;
       font-weight: bold;
     }
-    button:hover { background: #f00; }
     .status {
       text-align: center;
-      margin-top: 10px;
+      padding: 10px;
       color: #0f0;
       font-size: 14px;
+      background: #1a1a1a;
+      border-radius: 8px;
+      margin-top: 10px;
+    }
+
+    /* Responsive موبایل */
+    @media (max-width: 768px) {
+      .container { flex-direction: column; }
+      .sidebar { width: 100%; max-height: 35vh; }
+      .main { padding: 10px; }
+      video { height: auto; max-height: 55vh; }
+      .channel-item { font-size: 14px; padding: 12px 14px; }
     }
   </style>
 </head>
 <body>
 
-  <!-- سایدبار کانال‌ها -->
-  <div class="sidebar">
-    <h1>📺 شبکه‌ها</h1>
-    <ul class="channel-list" id="channelList"></ul>
+  <div class="header">📺 پخش زنده شبکه‌های ورزشی و خبری</div>
 
-    <div class="custom">
-      <input type="text" id="newUrl" placeholder="لینک m3u8 یا mp4 جدید">
-      <button onclick="addCustom()">پخش</button>
+  <div class="container">
+    <!-- سایدبار کانال‌ها -->
+    <div class="sidebar">
+      <ul class="channel-list" id="channelList"></ul>
+
+      <div class="custom">
+        <input type="text" id="newUrl" placeholder="لینک جدید (m3u8 یا mp4)">
+        <button onclick="addCustom()">پخش</button>
+      </div>
+    </div>
+
+    <!-- پخش‌کننده اصلی -->
+    <div class="main">
+      <video id="mainVideo" controls autoplay playsinline></video>
+      <div class="status" id="status">کانال را انتخاب کنید</div>
     </div>
   </div>
 
-  <!-- پخش‌کننده اصلی -->
-  <div class="main">
-    <video id="mainVideo" controls autoplay muted playsinline></video>
-    <div class="status" id="status">کانال را از لیست انتخاب کنید</div>
-  </div>
-
   <script>
-    const WORKER_URL = "https://test-tv.netmodvpn-3d1.workers.dev/";   // <<< اینجا آدرس ورکرت رو عوض کن
+    const WORKER_URL = "https://test-tv.netmodvpn-3d1.workers.dev";
 
     const channels = [
       { name: "پرشیانا اسپورت", url: "https://stream.live12.ir/hls2/persiana.m3u8" },
@@ -134,32 +154,21 @@
     const status = document.getElementById('status');
 
     function loadChannel(name, streamUrl) {
-      // پاک کردن قبلی
-      if (currentHls) {
-        currentHls.destroy();
-        currentHls = null;
-      }
+      if (currentHls) { currentHls.destroy(); currentHls = null; }
       video.src = '';
 
-      // فعال کردن دکمه
+      // فعال کردن آیتم
       document.querySelectorAll('.channel-item').forEach(el => el.classList.remove('active'));
-      const activeBtn = Array.from(document.querySelectorAll('.channel-item')).find(el => el.textContent === name);
-      if (activeBtn) activeBtn.classList.add('active');
+      const active = Array.from(document.querySelectorAll('.channel-item')).find(el => el.textContent === name);
+      if (active) active.classList.add('active');
 
       const proxiedUrl = `\( {WORKER_URL}/proxy?url= \){encodeURIComponent(streamUrl)}`;
-
       status.textContent = `در حال پخش: ${name}`;
 
       if (Hls.isSupported()) {
-        currentHls = new Hls({
-          enableWorker: true,
-          lowLatencyMode: true,
-          backBufferLength: 30
-        });
+        currentHls = new Hls({ enableWorker: true, lowLatencyMode: true, backBufferLength: 30 });
         currentHls.loadSource(proxiedUrl);
         currentHls.attachMedia(video);
-      } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = proxiedUrl;
       } else {
         video.src = proxiedUrl;
       }
@@ -168,14 +177,12 @@
     }
 
     function addCustom() {
-      const input = document.getElementById('newUrl');
-      const url = input.value.trim();
+      const url = document.getElementById('newUrl').value.trim();
       if (!url) return alert('لینک را وارد کنید');
       loadChannel("پخش سفارشی", url);
-      input.value = '';
+      document.getElementById('newUrl').value = '';
     }
 
-    // ساخت لیست کانال‌ها
     window.onload = () => {
       const list = document.getElementById('channelList');
       channels.forEach(ch => {
